<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rulecolor"
    android:gravity="top|left">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="172dp"
        android:layout_height="174dp"
        android:gravity="top|left"
        android:paddingLeft="20dip"
        android:paddingTop="-50dip"
        android:src="@drawable/information"
       />

    <Button
        android:id="@+id/ruleC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingLeft="20dip"
        android:paddingTop="60dip"
        android:text="@string/ruleChoice"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <Button
        android:id="@+id/infoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingLeft="20dip"
        android:paddingTop="40dip"
        android:text="@string/infoChoice"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:text="@string/formore"
        android:textColor="@color/black"
        android:paddingTop="70dip"
        android:gravity="center" />


</LinearLayout>
</ScrollView>